--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
                 <!-- .........Bootstrap cdn link added............... -->
 </head>
 <body>
+
+        <header>
+            <nav class="navbar navbar-expand-lg bg-light  ">
+                <div class="container">
+                    <a class="navbar-brand ps-5" href="#">
+                        <img class="img-fluid" src="./icons/Logo.png" alt="logo" width="350">
+                      </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse container" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                      <li class="nav-item">
+                        <a class="nav-link active pe-3" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link pe-3" href="#">product</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link pe-3" href="#">About us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link pe-5" href="#">Contract us</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
+
             <!--............script js added......................  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
             <!--............script js added......................  -->
