--- a/index.html
+++ b/index.html
@@ -267,6 +267,15 @@
                 <!-- ...........Subscriber section End................ -->    
         </main>
 
+        <footer class="container-fluid bg-dark ">
+            <h2 class="text-center text-white pt-5">Start your marketing journey now. Join any of our <br> free or paid courses today</h2>
+            <p class="text-white text-center py-2">Contact us for additional support.</p>
+            <div class="button d-flex justify-content-center align-items-center py-5">
+                <button type="button" class="btn btn-outline-success mx-2 px-3">VIEW ALL PRODUCT</button>
+                <button type="button" class="btn btn-outline-danger mx-2 px-3">GAIN ACCESS NOW </button>
+            </div>
+        </footer>
+
             <!--............script js added......................  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
             <!--............script js added......................  -->
