--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
+
+
+                <!-- ...........Favicon added................ -->
+
+                <link rel="apple-touch-icon" sizes="180x180" href="./Favicon/apple-touch-icon.png">
+                <link rel="icon" type="image/png" sizes="32x32" href="./Favicon/favicon-32x32.png">
+                <link rel="icon" type="image/png" sizes="16x16" href="./Favicon/favicon-16x16.png">
+                <link rel="manifest" href="./Favicon/site.webmanifest">
+                <meta name="msapplication-TileColor" content="#da532c">
+                <meta name="theme-color" content="#ffffff">
+
+                <!-- ...........Favicon added................ -->
+
+
                 <!-- ......Font awesome icon added........ -->
 
             <script src="https://kit.fontawesome.com/6cab9874b2.js" crossorigin="anonymous"></script>
+
+
                 <!-- ......Font awesome icon added........ -->
 
 
